chandeliers-lus/tests/compile_fail/ui/tc/strlit.stderr
error: Lustre only accepts literals of type int, float, or bool
 --> tests/fail/ui/tc/strlit.rs:2:20
  |
2 |     const S: int = "foobar";
  |                    ^^^^^^^^
